plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.renzzle'
version = '0.0.1-SNAPSHOT'
ext['testcontainers.version'] = '1.21.4'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencyManagement {
	dependencies {
		dependency 'org.apache.commons:commons-lang3:3.18.0'
	}
}

dependencies {
	// REST
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	// jpa, jdbc, mysql
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j'
	// aws
	implementation 'software.amazon.awssdk:s3:2.17.89'
	implementation 'software.amazon.awssdk:auth:2.17.89'
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.47.0'
	// security, jwt
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	// email
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	// html thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	//test container
	testImplementation 'org.testcontainers:testcontainers:1.21.4'
	testImplementation 'org.testcontainers:junit-jupiter:1.21.4'
	testImplementation 'org.testcontainers:mysql:1.21.4'
	// QueryDSL
	implementation 'io.github.openfeign.querydsl:querydsl-jpa:5.6.1:jakarta'
	annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:5.6.1:jakarta'
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	// Apache Commons Compress version
	implementation 'org.apache.commons:commons-compress:1.27.1'
	// Prometheus & Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	// MessagePack
	implementation 'org.msgpack:jackson-dataformat-msgpack:0.9.8'
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.compilerArgs << '-Xlint:all'
}

tasks.named('test', Test){
	useJUnitPlatform()
}

tasks.named('jar') {
	enabled = false
}
